--- a/rn/package.json
+++ b/rn/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
-    "react-native-loading-spinner-overlay": "^0.4.1"
+    "react-native-loading-spinner-overlay": "^0.4.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4"
+    "react-test-renderer": "~15.4.0-rc.4",
+    "redux-devtools": "^3.3.2"
   },
   "jest": {
     "preset": "react-native"
