--- a/rn/package.json
+++ b/rn/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
-    "react-native-loading-spinner-overlay": "^0.4.1"
+    "react-native-loading-spinner-overlay": "^0.4.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
